# test-selenium-chrome

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
