[tool.poetry]
name = "test-selenium"
version = "0.0.1"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.23.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
skip-string-normalization = true
include = '\.py$'
exclude = '''

(
  /(
    migrations
  )/
)
'''
