[tool.poetry]
name = "test-selenium"
version = "0.0.1"
description = ""
authors = ["Ren Adachi <49895682+moeyashi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
skip-string-normalization = true
include = '\.py$'
exclude = '''

(
  /(
    migrations
  )/
)
'''
